[package]
name = "uuid_v1_variant"
version = "0.1.1"
authors = ["Edward Tate <cmalune@gmail.com>"]
description = "A variant of UUID v1 (128bit) and 64bit nonce."
repository = "https://github.com/et4te/uuid"
license = "MIT"
exclude = [ ".gitignore" ]

[dependencies]
rustc-serialize = "0.3"
rand = "0.3"
