[package]
name = "uuid_v1_variant"
version = "0.1.1"
authors = ["Edward Tate <cmalune@gmail.com>"]
description = "A variant of UUID v1 (128bit) and 64bit nonce."
repository = "https://github.com/et4te/uuid"
license = "MIT"
exclude = [ ".gitignore" ]

[lib]
name = "uuid_v1_variant"
crate-type = ["staticlib"]

[dependencies]
rand = "0.3"
rustc-serialize = "0.3"
eui48 = "0.3"
